# civicsense

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  launch.py  pyproject.toml
.github/: FUNDING.yml
civicsense/: __init__.py
civicsense/ai/: __init__.py  detector.py  event_classifier.py  inference_worker.py  littering_engine.py  model_manager.py  pose_detector.py  tracker.py
civicsense/api/: __init__.py  app.py  routes.py
civicsense/cli/: __init__.py  classifier.py  detector.py
civicsense/config/: __init__.py  detection.toml
civicsense/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  progress.py
civicsense/database/: __init__.py  engine.py
civicsense/database/migrations/: __init__.py  env.py  script.py.mako
civicsense/database/migrations/versions/: __init__.py
civicsense/database/models/: __init__.py  orm.py
civicsense/database/repositories/: __init__.py  crud.py
civicsense/dto/: __init__.py  detection.py
civicsense/events/: __init__.py  event_bus.py
civicsense/gui/: __init__.py  analytics_page.py  dashboard_page.py  incident_page.py  live_monitor_page.py  main_window.py  settings_page.py
civicsense/gui/widgets/: __init__.py
civicsense/gui/workers/: __init__.py  ai_worker.py  camera_worker.py  save_worker.py
civicsense/interfaces/: __init__.py  protocols.py
civicsense/models/: __init__.py
civicsense/resources/: __init__.py
civicsense/services/: __init__.py  analytics_service.py  camera_service.py  evidence_service.py  export_service.py  incident_service.py
civicsense/utils/: __init__.py  helpers.py
tests/: __init__.py
tests/ai/: __init__.py  test_event_classifier.py  test_littering_engine.py  test_tracker.py
tests/database/: __init__.py  test_models.py
tests/integration/: __init__.py
tests/repositories/: __init__.py
tests/services/: __init__.py
tests/unit/: __init__.py  test_config.py  test_dto.py  test_event_bus.py  test_exceptions.py  test_helpers.py  test_progress.py
